@@ -19,6 +19,10 @@
 
 	<H3>Changes</H3>
 
+	<LI>HTMLDOC now calculates the resolution of the body
+	image using the printable width instead of the page
+	width.
+
 	<H3>Bug Fixes</H3>
 
 	<LI>"make install" didn't work in the fonts directory.
